--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
 <body>
     <nav class="navbar">
         <a href="/" class="nav-logo">Chateau de Boulbon</a>
+        <div class="nav-links">
+            <a href="/history.html"><span data-lang="en">History</span><span data-lang="fr">Histoire</span></a>
+            <a href="/agenda.html"><span data-lang="en">Agenda</span><span data-lang="fr">Agenda</span></a>
+            <a href="/contact.html"><span data-lang="en">Contact</span><span data-lang="fr">Contact</span></a>
+        </div>
         <div class="lang-toggle">
             <span data-lang-btn="en" class="active">EN</span>
             <span data-lang-btn="fr">FR</span>
